# werpy

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  meson.build  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: bandit.yml  codacy.yml  codecov.yml  codeql.yml  mypy.yml  pylint.yml  release-test.yml  release.yml  reuse.yml  ruff.yml  scorecards.yml  snyk-security.yml  wheels.yml
LICENSES/: BSD-3-Clause.txt
benchmarks/: speed_comparison_librispeech_full.py
docs/: requirements.in  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  modules.rst
docs/source/usage/: index.rst  normalization.rst  summarization.rst  weighted-word-error-rate.rst  word-error-rate.rst
tests/: test_normalize.py  test_summary.py  test_summaryp.py  test_wer.py  test_werp.py  test_werps.py  test_wers.py
werpy/: __init__.py  errorhandler.py  metrics.py  metrics.pyx  normalize.py  summary.py  summaryp.py  wer.py  werp.py  werps.py  wers.py
werpy_test_v4/: __init__.py  metrics.pyx  summary.py  summaryp.py  wer.py  werp.py  wers.py
