[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python', 
    'wheel', 
    'Cython', 
    'numpy'
]

[project]
name = 'werpy'
version = '3.0.2'
description = 'A powerful yet lightweight Python package to calculate and analyze the Word Error Rate (WER).'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ross Armstrong', email = 'ross.armstrong@analyticsinmotion.com'},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = [
    "wer",
    "word error rate",
    "python",
    "python package",
    "stt",
    "speech-to-text",
    "levenshtein distance",
    "nlp",
    "metrics"
]
dependencies = [
  "numpy>=1.26.0; python_version<'3.12'",
  "numpy>=2.2.0; python_version>='3.12'",
  "pandas>=2.0.0"
]

[project.urls]
"Repository" = "https://github.com/analyticsinmotion/werpy"
"Documentation" = "https://werpy.readthedocs.io/"
"Bug Tracker" = "https://github.com/analyticsinmotion/werpy/issues"


[project.optional-dependencies]
docs = [
    "sphinx==8.1.3",
    "sphinx-nefertiti==0.7.5",
]
