[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python', 
    'wheel', 
    'Cython', 
    'numpy'
]

[project]
name = 'werpy'
version = '3.1.1'
description = 'A powerful yet lightweight Python package to calculate and analyze the Word Error Rate (WER).'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ross Armstrong', email = 'ross.armstrong@analyticsinmotion.com'},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = [
    "werpy",
    "wer",
    "word error rate",
    "asr",
    "automatic speech recognition",
    "stt",
    "speech-to-text",
    "levenshtein distance",
    "text similarity",
    "nlp",
    "accuracy metrics"
]
dependencies = [
  "numpy>=1.26.0; python_version<'3.12'",
  "numpy>=2.2.0; python_version>='3.12'",
  "pandas>=2.0.0"
]

[project.urls]
"Repository" = "https://github.com/analyticsinmotion/werpy"
"Documentation" = "https://werpy.readthedocs.io/"
"Bug Tracker" = "https://github.com/analyticsinmotion/werpy/issues"


[project.optional-dependencies]
docs = [
    "sphinx==8.2.3",
    "sphinx-nefertiti==0.9.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
benchmarks = [
    "datasets>=4.4.1",
    "werx>=0.3.1",
    "jiwer>=4.0.0",
]